[build] search for host lemon when crosscompiling with CMake
Building lemon inside the project with the crosscompiler will work, but the
resulting binary can't be executed on the host. Just search for a lemon binary,
so the user can also override this if it is not in the path.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -879,7 +879,12 @@ if(WIN32)
 	set(COMMON_SRC ${COMMON_SRC} xgetopt.c)
 endif()
 
-add_executable(lemon lemon.c)
+if(CMAKE_CROSSCOMPILING)
+	find_program(LEMON_PARSER NAMES lemon)
+else()
+	add_executable(lemon lemon.c)
+	set(LEMON_PARSER "${CMAKE_CURRENT_BINARY_DIR}/lemon")
+endif()
 
 ## Build parsers by using lemon...
 lemon_parser(configparser.y)
