--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -831,7 +831,7 @@ endif()
 
 set(LIGHTTPD_VERSION_ID 10400)
 set(PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
-set(PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}")
+set(PACKAGE_VERSION "${PROJECT_VERSION}")
 
 if(NOT SBINDIR)
 	set(SBINDIR "sbin")
