[cmake] set LIGHTTPD_VERSION_ID per version
lighttpd code is not tested for binary compatibility between releases

Set a per-version LIGHTTPD_VERSION_ID to try to detect modules built
against a different version of lighttpd.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -829,7 +829,7 @@ else()
 	unset(HAVE_LIBDL)
 endif()
 
-set(LIGHTTPD_VERSION_ID 10400)
+set(LIGHTTPD_VERSION_ID 0x104${PROJECT_VERSION_PATCH})
 set(PACKAGE_NAME "${CMAKE_PROJECT_NAME}")
 set(PACKAGE_VERSION "${PROJECT_VERSION}")
 
