[meson] set LIGHTTPD_VERSION_ID per version
lighttpd code is not tested for binary compatibility between releases

Set a per-version LIGHTTPD_VERSION_ID to try to detect modules built
against a different version of lighttpd.

--- a/src/meson.build
+++ b/src/meson.build
@@ -248,7 +248,7 @@ conf_data.set('HAVE_STRUCT_TM_GMTOFF', compiler.compiles('''
 	args: defs
 ))
 
-conf_data.set('LIGHTTPD_VERSION_ID', 10400)
+conf_data.set('LIGHTTPD_VERSION_ID', ''.join(['0x104', meson.project_version().split('.')[2]]))
 conf_data.set_quoted('PACKAGE_NAME', meson.project_name())
 conf_data.set_quoted('PACKAGE_VERSION', meson.project_version())
 conf_data.set_quoted('LIBRARY_DIR', moduledir)
