[cmake] use find_package() to include the PkgConfig module
The intention is to search for things, so call the correct command to do it.

github: #121

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,7 @@ include(CheckVariableExists)
 include(CheckTypeSize)
 include(CheckLibraryExists)
 include(CMakeDetermineCCompiler)
-include(FindPkgConfig)
+find_package(PkgConfig)
 
 include(LighttpdMacros)
 
