[build] improve searching for PostgreSQL
Use CMake builtin module to search for PostgreSQL if a recent enough version of
CMake is used. Properly look for the include otherwise, it may be in a directory
that is not in the compiler default search paths.

There is no need to look for pg_config, the returned values were not used at
all. It also returns information on the server components, which are of no real
interest here, so the script may not even be present even if the client
development headers are installed.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -353,14 +353,28 @@ else()
 endif()
 
 if(WITH_PGSQL)
-	xconfig(pg_config PGSQL_INCDIR PGSQL_LIBDIR PGSQL_LDFLAGS PGSQL_CFLAGS)
+	if(CMAKE_VERSION VERSION_GREATER_EQUAL 3.14)
+		find_package(PostgreSQL)
+		if(PostgreSQL_FOUND)
+			set(PGSQL_LIBRARY PostgreSQL::PostgreSQL)
+			set(HAVE_PGSQL TRUE)
+		endif()
+	else()
+		find_path(POSTGRESQL_INCLUDE_DIR
+			NAMES libpq-fe.h
+			PATH_SUFFIXES pgsql postgresql)
 
-	check_include_files(libpq-fe.h HAVE_PGSQL_H)
-	if(HAVE_PGSQL_H)
-		check_library_exists(pq PQsetdbLogin "" HAVE_PGSQL)
+		if(POSTGRESQL_INCLUDE_DIR)
+			check_library_exists(pq PQsetdbLogin "" HAVE_PGSQL)
+			if(HAVE_PGSQL)
+				set(PGSQL_LIBRARY pq)
+			endif()
+			include_directories(${POSTGRESQL_INCLUDE_DIR})
+		else()
+			set(HAVE_PGSQL FALSE)
+		endif()
 	endif()
 else()
-	unset(HAVE_PGSQL_H)
 	unset(HAVE_PGSQL)
 endif()
 
@@ -1013,9 +1027,9 @@ if(HAVE_MYSQL_H AND HAVE_MYSQL)
 	include_directories(/usr/include/mysql)
 endif()
 
-if(HAVE_PGSQL_H AND HAVE_PGSQL)
+if(HAVE_PGSQL)
 	add_and_install_library(mod_vhostdb_pgsql "mod_vhostdb_pgsql.c")
-	target_link_libraries(mod_vhostdb_pgsql pq)
+	target_link_libraries(mod_vhostdb_pgsql ${PGSQL_LIBRARY})
 endif()
 
 if(HAVE_DBI_H AND HAVE_DBI)
