[doc] default lighttpd.conf: omit server.use-ipv6
avoid lighttpd warning resulting from server.use-ipv6 = "enable"
with unspecified or blank server.bind

--- a/doc/config/lighttpd.conf
+++ b/doc/config/lighttpd.conf
@@ -88,12 +88,8 @@ include conf_dir + "/modules.conf"
 server.port = 80
 
 ##
-## Use IPv6?
-##
-server.use-ipv6 = "enable"
-
-##
 ## bind to a specific IP
+## (default: "*" for all local IPv4 interfaces)
 ##
 #server.bind = "localhost"
 
