[tests] disable auth.delay-invalid-creds for tests
avoid response delay after bad authentication *while running tests*

--- a/tests/lighttpd.conf
+++ b/tests/lighttpd.conf
@@ -16,6 +16,8 @@ server.breakagelog         = env.SRCDIR + "/tmp/lighttpd/logs/lighttpd.breakage.
 server.name                = "www.example.org"
 server.tag                 = "lighttpd-1.4.x"
 
+server.feature-flags += ( "auth.delay-invalid-creds" => "disable" )
+
 server.dir-listing          = "enable"
 
 server.modules = (
