[cmake] add doc/CMakeLists.txt to dist tar ball (#3181)
x-ref:
  "Meson / CMake build issues"
  https://redmine.lighttpd.net/issues/3181

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -3,6 +3,7 @@ dist_man8_MANS=lighttpd.8 lighttpd-angel.8
 GNUMAKEFLAGS=--no-print-directory -s
 
 EXTRA_DIST= \
+	CMakeLists.txt \
 	initscripts.txt \
 	newstyle.css \
 	oldstyle.css
