[meson] add meson.build to install man pages (fixes #3181)
x-ref:
  "Meson / CMake build issues"
  https://redmine.lighttpd.net/issues/3181

--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -5,5 +5,6 @@ GNUMAKEFLAGS=--no-print-directory -s
 EXTRA_DIST= \
 	CMakeLists.txt \
 	initscripts.txt \
+	meson.build \
 	newstyle.css \
 	oldstyle.css
